--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -166,10 +166,10 @@ K7 已适配MIPI屏：
 
 | **MIPI Panel Model** | **Diagonal Size** | **Resolution** |
 | -------------------- | ----------------- | -------------- |
-| AT101DS40I           | 10.1-inch         | 1280×800       |
-| MX101BA1340          | 10.1-inch         | 1280×800       |
-| MX080B2140           | 8.0-inch          | 1280×800       |
-| F050008M01           | 5.0-inch          | 1280×720       |
+| AT101DS40I           | 10.1-inch         | 800x1280       |
+| MX101BA1340          | 10.1-inch         | 800x1280       |
+| MX080B2140           | 8.0-inch          | 800x1280       |
+| F050008M01           | 5.0-inch          | 720x1280       |
 
 MIPI屏排线连接处：蓝色朝上，白色面朝下，接入MIPI DSI 接口
 
