--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -234,13 +234,13 @@ K5开发板支持 Single LVDS 、DUAL LVDS
 背光修改
 
 ``` shell
-Target#	echo lcd0 > /sys/kernel/debug/dispdbg/name
-Target#	echo setbl > /sys/kernel/debug/dispdbg/command
-Target#	echo 128 > /sys/kernel/debug/dispdbg/param
-Target#	echo 1 > /sys/kernel/debug/dispdbg/start
-Target#	echo setbl > /sys/kernel/debug/dispdbg/command
-Target#	echo 255 > /sys/kernel/debug/dispdbg/param
-Target#	echo 1 > /sys/kernel/debug/dispdbg/start	
+echo lcd0 > /sys/kernel/debug/dispdbg/name
+echo setbl > /sys/kernel/debug/dispdbg/command
+echo 128 > /sys/kernel/debug/dispdbg/param
+echo 1 > /sys/kernel/debug/dispdbg/start
+echo setbl > /sys/kernel/debug/dispdbg/command
+echo 255 > /sys/kernel/debug/dispdbg/param
+echo 1 > /sys/kernel/debug/dispdbg/start	
 ```
 
 
