--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -154,7 +154,7 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 
 #### 烧录分区镜像
 
-这种方式正常编译的镜像可以用这种方式调试，多屏自适应镜像则不行，网盘中的固件均为多屏自适应镜像。
+分区镜像主要用于正常编译的镜像的调试使用，多屏自适应镜像不能烧分区镜像替换，网盘中的固件均为多屏自适应镜像。
 
 ![image-20230926170256112](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230926170256112.png)
 
