--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -30,7 +30,7 @@
 
 ### K3引脚列表
 
-![K3_产品详情页_10](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/K3_产品详情页_10.jpg)
+![image-20250312141333883](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250312141333883.png)
 
 ### K8引脚列表
 
