--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -215,7 +215,7 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 
 ### 硬件接线
 
-![image-20250110152735195](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152735195.png)
+![image-20250110152735195](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250110152735195.png)
 
 
 
@@ -244,7 +244,7 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 
 ### **硬件接线**
 
-![image-20250110152808407](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152808407.png)
+![image-20250110152808407](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250110152808407.png)
 
 
 
@@ -254,7 +254,7 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 
 ### **硬件接线**
 
-![image-20250110152818915](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152818915.png)
+![image-20250110152818915](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250110152818915.png)
 
 
 
@@ -274,7 +274,7 @@ Period count:   min=2           max=32768
 
 ### **硬件接线**
 
-![image-20250110152824237](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152824237.png)
+![image-20250110152824237](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250110152824237.png)
 
 
 
@@ -294,7 +294,7 @@ Period count:   min=2           max=32768
 
 ### **硬件接线**
 
-![image-20250110152830177](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152830177.png)
+![image-20250110152830177](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250110152830177.png)
 
 
 
@@ -305,7 +305,7 @@ Period count:   min=2           max=32768
 
 ### **硬件接线**
 
-![image-20250110153056417](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110153056417.png)
+![image-20250110153056417](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250110153056417.png)
 
 
 
@@ -313,7 +313,7 @@ Period count:   min=2           max=32768
 
 ### **硬件接线**
 
-![image-20250110153117263](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110153117263.png)
+![image-20250110153117263](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250110153117263.png)
 
 ### **开关控制**
 
@@ -337,7 +337,7 @@ K7开发板 配备一路 PCIE 2.0 M.2 SSD硬盘接口
 
 ### **硬件接线**
 
-![image-20250110153138855](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110153138855.png)
+![image-20250110153138855](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250110153138855.png)
 
 
 
