--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -70,7 +70,7 @@ $ echo 0 > /sys/class/leds/work-led/brightness
 
 ## GPIO
 
-K2B开发板的扩展20Pin引脚中默认有9路可控GPIO。
+开发板的扩展20Pin引脚中默认有9路可控GPIO。
 
 首先，通过 [扩展引脚](#扩展引脚) 章节，确认GPIO引脚位置、编号，参考以下步骤可对指定GPIO进行状态控制。
 
