--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -74,7 +74,7 @@ $ echo 0 > /sys/class/leds/work-led/brightness
 
 首先，通过 [扩展引脚](#扩展引脚) 章节，确认GPIO引脚位置、编号，参考以下步骤可对指定GPIO进行状态控制。
 
-
+高电平电压：PB-3.3V PC-1.8V
 
 **查看GPIO注册列表**
 
