--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -2,6 +2,26 @@
 
 
 
+## GPIO工具使用
+
+``` shell
+gpio readall //获取所有管脚状态
+```
+
+![image-20250314150200725](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250314150200725.png)
+
+``` shell
+gpio read <wPI>        //读管脚电平
+gpio mode <wPI> <mode> //设置管教工作模式 (当前版本支持设置out/int/up/down 模式)
+gpio write <wPI> <val> //设置管脚输出电平
+```
+
+
+
+
+
+
+
 
 
 ## 配置文件路径
