--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -16,9 +16,21 @@ gpio mode <wPI> <mode> //设置管教工作模式 (当前版本支持设置out/i
 gpio write <wPI> <val> //设置管脚输出电平
 ```
 
+### 使用演示
 
+设置PH5输出高电平
 
+``` shell
+kickpi@kickpi:~$ gpio mode 0 out
+kickpi@kickpi:~$ gpio read 0
+0
+kickpi@kickpi:~$ gpio write 0 1
+kickpi@kickpi:~$ gpio read 0
+1
+kickpi@kickpi:~$
+```
 
+可使用万用表测得此时PH5管脚为3.3V
 
 
 
