--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -18,7 +18,7 @@ gpio write <wPI> <val> //设置管脚输出电平
 
 ### 使用演示
 
-设置PH5输出高电平
+设置PH5为输出模式，输出高电平
 
 ``` shell
 kickpi@kickpi:~$ gpio mode 0 out
@@ -30,7 +30,9 @@ kickpi@kickpi:~$ gpio read 0
 kickpi@kickpi:~$
 ```
 
-可使用万用表测得此时PH5管脚为3.3V
+可使用万用表测得此时PH5管脚为高电平
+
+设置PH5为输入模式
 
 
 
