--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -34,6 +34,17 @@ kickpi@kickpi:~$
 
 设置PH5为输入模式
 
+``` shell
+kickpi@kickpi:~$ gpio mode 0 in
+kickpi@kickpi:~$ gpio mode 0 down
+kickpi@kickpi:~$ gpio read 0
+0
+kickpi@kickpi:~$//短接管脚3和管脚4
+kickpi@kickpi:~$ gpio read 0
+1
+kickpi@kickpi:~$
+```
+
 
 
 
