--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -403,7 +403,48 @@ PermitRootLogin yes
 
 
 
+### VNC远程桌面登陆
 
+vnc软件下载
+
+[Download VNC Viewer by RealVNC®](https://www.realvnc.com/en/connect/download/viewer/?lai_vid=EW3mEzvVmIeJO&lai_sr=10-14&lai_sl=l)
+
+``` shell
+板卡开启VNC服务，并配置密码
+vncserver
+```
+
+![image-20250317141556644](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250317141556644.png)
+
+修改VNC配置
+
+vim /home/kickpi/.vnc/xstartup
+
+注释所有内容并添加一下内容
+
+``` 
+unset SESSION_MANAGER
+unset DBUS_SESSION_BUS_ADDRESS
+startxfce4 &
+```
+
+![image-20250317142240671](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250317142240671.png)
+
+重启VNC服务
+
+``` shell
+vncserver -geometry 1920x1080
+```
+
+![image-20250317142417293](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250317142417293.png)
+
+打开RealVNC Viewer
+
+输入ip端口号和密码
+
+![image-20250317142654795](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250317142654795.png)
+
+![image-20250317142740629](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250317142740629.png)
 
 ### UBUNTU从官网安装软件包
 
