--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -12,7 +12,7 @@ gpio readall //获取所有管脚状态
 
 ``` shell
 gpio read <wPI>        //读管脚电平
-gpio mode <wPI> <mode> //设置管教工作模式 (当前版本支持设置out/int/up/down 模式)
+gpio mode <wPI> <mode> //设置管脚工作模式 (当前版本支持设置out/int/up/down 模式)
 gpio write <wPI> <val> //设置管脚输出电平
 ```
 
