--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -535,13 +535,25 @@ Debian / Ubuntu 文件系统已内置 glmark2-es 性能测试工具
 2. 使用虚拟终端或调试串口终端，执行以下命令开始 GPU 性能测试
 
 ```
-$ source /rockchip-test/gpu/test_fullscreen_glmark2.sh
+root@linaro-alip:/# source /rockchip-test/gpu/test_offscreen_glmark2.sh 
+run glmark2 x11 with offscreen......
+arm_release_ver: g13p0-01eac0, rk_so_ver: 10
 =======================================================
-                                  glmark2 Score: 337 
+    glmark2 2023.01
+=======================================================
+    OpenGL Information
+    GL_VENDOR:      ARM
+    GL_RENDERER:    Mali-G52
+    GL_VERSION:     OpenGL ES 3.2 v1.g13p0-01eac0.0fd2effaec483a5f4c440d2ffa25eb7a
+    Surface Config: buf=32 r=8 g=8 b=8 a=8 depth=24 stencil=0 samples=0
+    Surface Size:   800x600 windowed
+=======================================================
+=======================================================
+                                  glmark2 Score: 1405 
 =======================================================
 ```
 
-> glmark2测试分数为 337
+> glmark2测试分数为  1405
 
 
 
