--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -530,9 +530,7 @@ gpu_test.sh  test_fullscreen_glmark2.sh  test_normal_glmark2.sh test_offscreen_g
 
 Debian / Ubuntu 文件系统已内置 glmark2-es 性能测试工具
 
-1. 板卡连接显示设备
-
-2. 使用虚拟终端或调试串口终端，执行以下命令开始 GPU 性能测试
+使用虚拟终端或调试串口终端，执行以下命令开始 GPU 性能测试
 
 ```
 root@linaro-alip:/# source /rockchip-test/gpu/test_offscreen_glmark2.sh 
@@ -553,7 +551,7 @@ arm_release_ver: g13p0-01eac0, rk_so_ver: 10
 =======================================================
 ```
 
-> glmark2测试分数为  1405
+> 800x600 windowed glmark2测试分数为  1405
 
 
 
