--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -551,7 +551,7 @@ arm_release_ver: g13p0-01eac0, rk_so_ver: 10
 =======================================================
 ```
 
-> 800x600 windowed glmark2测试分数为  1405
+> 800x600 glmark2测试分数为  1405
 
 
 
