--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -168,3 +168,11 @@ gpio-para 是全志的GPIO控制驱动，可实现简单的电平高低控制
 +debug_uart=ttyAS3
 ```
 
+
+
+## 添加uart2支持
+
+PH6,7,8,9默认为SPI
+PH4,5默认为I2C
+要将PH5 PH6作为UART2使用默认功能就要关闭 uart2功能要打开
+
