--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -174,5 +174,6 @@ gpio-para 是全志的GPIO控制驱动，可实现简单的电平高低控制
 
 PH6,7,8,9默认为SPI
 PH4,5默认为I2C
-要将PH5 PH6作为UART2使用默认功能就要关闭 uart2功能要打开
+要将PH5 PH6作为UART2使用，则原先的默认功能就要关闭，uart2功能要打开
 
+![cf9c366bb88d7214bc93412cbc0accb3](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/cf9c366bb88d7214bc93412cbc0accb3.jpg)
