--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -4,6 +4,14 @@
 
 ## GPIO工具使用
 
+工具下载网盘地址路径
+
+h618_data\3-SoftwareData软件资料\GPIO_tools
+
+将wiringKP.tar.gz在板卡上解压
+
+可执行文件和库文件分别放到/usr/bin和/usr/lib目录下
+
 ``` shell
 gpio readall //获取所有管脚状态
 ```
@@ -51,7 +59,7 @@ kickpi@kickpi:~$
 
 ## 配置文件路径
 
-扩展引脚配置 仅需要修改设备树文件，以下分别例举Android、Linux SDK对应的设备树路径
+默认扩展引脚配置 仅需要修改设备树文件，以下分别例举Android、Linux SDK对应的设备树路径
 
 
 
