--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -715,7 +715,13 @@ K3开发板支持双路MIPI CSI 4Lane 摄像头接口，最多可接四路摄像
 >
 > 任何FPC接口外设插拔前，必须保证板卡完全断电
 
+### cheese 预览
 
+命令行输入
+
+```shell
+$ cheese
+```
 
 ### Debian gst-launch-1.0预览图像
 
