--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -723,6 +723,10 @@ K3开发板支持双路MIPI CSI 4Lane 摄像头接口，最多可接四路摄像
 $ cheese
 ```
 
+> 命令行执行启动cheese程序后，直接显示相机图像
+
+![image-20230906140719725](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230906140719725.png)
+
 ### Debian gst-launch-1.0预览图像
 
 Debian文件系统 内置gst-launch-1.0测试脚本
