--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -724,6 +724,8 @@ $ cheese
 ```
 
 > 命令行执行启动cheese程序后，直接显示相机图像
+>
+> Ubuntu目前存在ISP库问题，预览效果会很差很暗。
 
 ![image-20230906140719725](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230906140719725.png)
 
