--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -28,6 +28,8 @@ gpio write <wPI> <val> //设置管脚输出电平
 
 设置PH5为输出模式，输出高电平
 
+其中PC管脚输出电压为1.8V，PH管脚输出电压为3.3V
+
 ``` shell
 kickpi@kickpi:~$ gpio mode 0 out
 kickpi@kickpi:~$ gpio read 0
