--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -19,9 +19,9 @@ gpio readall //获取所有管脚状态
 ![image-20250314150200725](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250314150200725.png)
 
 ``` shell
-gpio read <wPI>        //读管脚电平
-gpio mode <wPI> <mode> //设置管脚工作模式 (当前版本支持设置out/int/up/down 模式)
-gpio write <wPI> <val> //设置管脚输出电平
+gpio read <wPi>        //读管脚电平
+gpio mode <wPi> <mode> //设置管脚工作模式 (当前版本支持设置out/int/up/down 模式)
+gpio write <wPi> <val> //设置管脚输出电平
 ```
 
 ### 使用演示
