--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -26,6 +26,14 @@
 
 
 
+## 系统供电
+
+使用DC_12V接口供电 
+
+![image-20250322093752078](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250322093752078.png)![image-20250322093804013](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250322093804013.png)
+
+若使用21寸LVDS屏幕，需使用12V_5A适配器。
+
 ## LRADC
 
 位置：开发板 20Pin [扩展引脚](扩展引脚) 1 号脚
