--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -190,30 +190,6 @@ cat /sys/kernel/debug/sunxi_pinctrl/dev_name
 
 
 
-
-## 配置文件路径
-
-默认扩展引脚配置 仅需要修改设备树文件，以下分别例举Android、Linux SDK对应的设备树路径
-
-
-
-**Android SDK设备树路径**
-
-```
-$ vim longan/device/config/chips/h618/configs/p2/board.dts
-```
-
-**Linux SDK设备树路径**
-
-```shell
-$ vim source/kernel/linux-5.4-h618/arch/arm64/boot/dts/sunxi/sun50iw9-kickpi-k2b.dts
-根据自己的板型选择sun50iw9-kickpi-k2b.dts或sun50iw9-kickpi-k2c.dts
-```
-
-
-
-
-
 ## 示例功能配置
 
 
@@ -292,9 +268,7 @@ gpio-para 是全志的GPIO控制驱动，可实现简单的电平高低控制
 };
 ```
 
-
-
-## 修改UART控制端口
+### 修改UART控制端口
 
 修改debug_uart到你想用的uart，取消就用未使能的uart口
 
@@ -310,9 +284,7 @@ gpio-para 是全志的GPIO控制驱动，可实现简单的电平高低控制
 +debug_uart=ttyAS3
 ```
 
-
-
-## 添加uart2支持
+### 添加uart2支持
 
 PH6,7,8,9默认为SPI
 PH4,5默认为I2C
