--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1424,7 +1424,7 @@ RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ 
 
 
 
-## 30、KEY测试<a id="KEYtest"></a>
+## 30、KEY测试<a id="KEYtest"> </a>
 
 * Android测试使用命令getevent:
 
@@ -1487,5 +1487,32 @@ Event: time 1699275783.647094, -------------- SYN_REPORT ------------
 
 
 
+## 31、UART转RS485/RS232模块
 
+### 接线方式
 
+RS485模块(3.3V/5V 供电均可)：
+
+![image-20250324142033232](C:\Users\xiesh\Desktop\image-20250324142033232.png)
+
+> 4PIN端连接板子UART口接线方式为（上下对应）：
+>
+> 主板： RX     TX    GND  VCC
+> 模块：RXD  TXD  GND   VCC
+>
+> 
+
+RS232模块(3.3V/5V 供电均可)：
+
+![image-20250324142614631](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250324142614631.png)
+
+>4PIN端连接板子UART口，接线方式为（上下对应）：
+>
+>主板： TX     RX    GND  VCC
+>模块：RXD  TXD  GND   VCC
+>
+>3PIN端连接RS232设备，接线方式为（上下对应）：
+>
+>模块：	     RXD     TXD    GND  
+>
+>RS232 设备： TXD     RXD    GND 
