--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1500,7 +1500,11 @@ RS485模块(3.3V/5V 供电均可)：
 > 主板： RX     TX    GND  VCC
 > 模块：RXD  TXD  GND   VCC
 >
-> 
+> 3PIN端连接RS485设备，接线方式为（上下对应）：
+>
+> 模块：	     A     B    GND  
+>
+> RS485 设备： A     B    GND 
 
 RS232模块(3.3V/5V 供电均可)：
 
@@ -1513,6 +1517,6 @@ RS232模块(3.3V/5V 供电均可)：
 >
 >3PIN端连接RS232设备，接线方式为（上下对应）：
 >
->模块：	     RXD     TXD    GND  
+>模块：	     RXD    GND      TXD
 >
->RS232 设备： TXD     RXD    GND 
+>RS232 设备： TXD    GND      RXD 
