--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1502,9 +1502,9 @@ RS485模块(3.3V/5V 供电均可)：
 >
 > 3PIN端连接RS485设备，接线方式为（上下对应）：
 >
-> 模块：	     A     B    GND  
+> 模块：	     A     GND    B  
 >
-> RS485 设备： A     B    GND 
+> RS485 设备： A     GND    B 
 
 RS232模块(3.3V/5V 供电均可)：
 
