--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1493,7 +1493,7 @@ Event: time 1699275783.647094, -------------- SYN_REPORT ------------
 
 RS485模块(3.3V/5V 供电均可)：
 
-![image-20250324142033232](C:\Users\xiesh\Desktop\image-20250324142033232.png)
+![image-20250324143115205](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250324143115205.png)
 
 > 4PIN端连接板子UART口接线方式为（上下对应）：
 >
@@ -1520,3 +1520,4 @@ RS232模块(3.3V/5V 供电均可)：
 >模块：	     RXD    GND      TXD
 >
 >RS232 设备： TXD    GND      RXD 
+
