--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1521,3 +1521,39 @@ RS232模块(3.3V/5V 供电均可)：
 >
 >RS232 设备： TXD    GND      RXD 
 
+
+
+使用microcom验证：
+
+接收的内容会打印出来，发送的内容无打印
+
+```shell
+# microcom -s 115200 /dev/ttyAS3
+```
+
+使用minicom验证：
+
+接收的内容会打印出来，发送的内容无打印
+
+```shell
+# minicom -b 115200 -D /dev/ttyAS3
+```
+
+> crt+A 进入控制 B-Z命令  Z为help
+
+> | Ctrl+A X | 退出程序                        |
+> | -------- | ------------------------------- |
+> | Ctrl+A W | 启用/禁用自动换行，默认禁用     |
+> | Ctrl+A E | **启用/禁用输入显示**，默认禁用 |
+> | Ctrl+A C | 清屏                            |
+
+如果退出后串口被不正常占用：minicom -s 将 Serial port setup>> F   Hardware Flow Control 关掉  然后保存退出
+
+或者使用echo直接发送
+
+```shell
+# stty -F /dev/ttyAS3 -a 	//可以看默认波特率
+# stty -F /dev/ttyAS3 115200 	//可以设置
+# echo "123" > /dev/ttyAS3
+```
+
