--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1521,9 +1521,9 @@ RS232模块(3.3V/5V 供电均可)：
 >
 >RS232 设备： TXD    GND      RXD 
 
+### 测试方式：
 
-
-使用microcom验证：
+Android 可以使用串口APP 或 命令行使用microcom验证：
 
 接收的内容会打印出来，发送的内容无打印
 
@@ -1531,7 +1531,14 @@ RS232模块(3.3V/5V 供电均可)：
 # microcom -s 115200 /dev/ttyAS3
 ```
 
-使用minicom验证：
+Linux系统 可以安装 使用minicom验证：
+
+安装minicom
+
+```shell
+$ sudo apt update
+$ sudo apt install minicom
+```
 
 接收的内容会打印出来，发送的内容无打印
 
