--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1554,7 +1554,13 @@ $ sudo apt install minicom
 > | Ctrl+A E | **启用/禁用输入显示**，默认禁用 |
 > | Ctrl+A C | 清屏                            |
 
-如果退出后串口被不正常占用：minicom -s 将 Serial port setup>> F   Hardware Flow Control 关掉  然后保存退出
+如果退出后串口被不正常占用：
+
+```shell
+$ minicom -s 
+```
+
+> Serial port setup >> F   Hardware Flow Control 关掉 >> Save setup as dfl 保存 >> Exit from Minicom 退出
 
 或者使用echo直接发送
 
