--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -90,14 +90,12 @@ PH3 为 8组， 3号脚
 
 先将对应GPIO引脚注释，/sys/class/gpio/export 只能导入未注册的 gpio
 
-比如PH8，如需其他引脚，一样在 leds 结点下注释即可 ,  下面内容都以PH8 做举例
+如需其他引脚，一样在 leds 结点下注释即可 ,  下面内容都以PH8 做举例
 
 ```diff
 vim longan/device/config/chips/h618/configs/p2/linux-5.4/board-*.dts  //android
 vim source/kernel/linux-5.4-h618/arch/arm64/boot/dts/sunxi/board.dts //Linux
 ```
-
-
 
 步骤二
 
