--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -2,7 +2,7 @@
 
 ## 扩展引脚
 
-![](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/30引脚定义.png)
+![image-20250325171233411](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250325171233411.png)
 
 ## LVDS
 
