--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -80,13 +80,17 @@ PH3 为 8组， 3号脚
 
 ### sys gpio控制
 
-当存在将拓展引脚配置为输入的需求，默认软件的gpio-led不能满足需求。
-
 将GPIO释放出来，通过/sys/class/gpio进行控制
 
 步骤一
 
-先将对应GPIO引脚注释，/sys/class/gpio/export 只能导入未注册的 gpio
+先将对应GPIO引脚注释，/sys/class/gpio/export 只能导出未注册UNCLAIMED的 gpio
+
+``` 
+cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pinmux-pins
+```
+
+
 
 如需其他引脚，一样在 leds 结点下注释即可 ,  下面内容都以PH8 做举例
 
