--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -84,7 +84,7 @@ PH3 为 8组， 3号脚
 
 步骤一
 
-先将对应GPIO引脚注释，/sys/class/gpio/export 只能导出未注册UNCLAIMED的 gpio
+/sys/class/gpio/export 只能导出未注册的 gpio
 
 ``` 
 cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pinmux-pins
