--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -56,9 +56,9 @@ kickpi@kickpi:~$
 ```
 
 
-## PIN 控制
+## GPIO控制
 
-### pin 脚计算
+### GPIO编号计算
 
 ( B ~ J ) 一组按32位算
 
@@ -76,7 +76,9 @@ PH3 为 8组， 3号脚
 
 其他引脚类比计算即可
 
+GPIO编号查询
 
+cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pins
 
 ### sys gpio控制
 
@@ -84,13 +86,15 @@ PH3 为 8组， 3号脚
 
 步骤一
 
-/sys/class/gpio/export 只能导出未注册的 gpio
+/sys/class/gpio/export 只能导出UNCLAIMED状态的 gpio
 
-``` 
+查看所需管脚是否是UNCLAIMED状态
+
+``` shell
 cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pinmux-pins
 ```
 
-
+管脚非UNCLAIMED状态 说明管脚被内核注册了，需要修改设备树，注释掉其默认功能
 
 如需其他引脚，一样在 leds 结点下注释即可 ,  下面内容都以PH8 做举例
 
