--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -58,6 +58,9 @@ kickpi@kickpi:~$
 
 ## GPIO控制
 
+
+### GPIO编号查询
+cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pins
 ### GPIO编号计算
 
 ( B ~ J ) 一组按32位算
@@ -76,9 +79,6 @@ PH3 为 8组， 3号脚
 
 其他引脚类比计算即可
 
-GPIO编号查询
-
-cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pins
 
 ### sys gpio控制
 
