--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -60,7 +60,12 @@ kickpi@kickpi:~$
 
 
 ### GPIO编号查询
+``` shell
 cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pins
+```
+
+
+
 ### GPIO编号计算
 
 ( B ~ J ) 一组按32位算
