--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -69,7 +69,7 @@ cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pins
 
 将GPIO释放出来，通过/sys/class/gpio进行控制
 
-步骤一
+步骤一 修改管脚状态
 
 /sys/class/gpio/export 只能导出UNCLAIMED状态的 gpio
 
@@ -81,7 +81,11 @@ cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pinmux-pins
 
 管脚非UNCLAIMED状态 说明管脚被内核注册了，需要修改设备树，注释掉其默认功能
 
-如需其他引脚，一样在 leds 结点下注释即可 ,  下面内容都以PH8 做举例
+PH2 PH3 做举例
+
+查询管脚状态，发现PH2 PH3作为了uart5
+
+![image-20250326115428401](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250326115428401.png)
 
 ```diff
 vim longan/device/config/chips/h618/configs/p2/linux-5.4/board-*.dts  //android
