--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -92,6 +92,8 @@ vim longan/device/config/chips/h618/configs/p2/linux-5.4/board-*.dts  //android
 vim source/kernel/linux-5.4-h618/arch/arm64/boot/dts/sunxi/sun50iw9-kickpi-k2b.dts //Linux
 ```
 
+关闭默认功能
+
 
 
 步骤二
