--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -94,13 +94,11 @@ vim source/kernel/linux-5.4-h618/arch/arm64/boot/dts/sunxi/sun50iw9-kickpi-k2b.d
 
 关闭默认功能
 
-
+![image-20250326133713399](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250326133713399.png)
 
 步骤二
 
 ​		编译镜像，重新烧录
-
-
 
 步骤三
 
@@ -111,7 +109,7 @@ root@kickpi:~# cat /sys/kernel/debug/pinctrl/pio/pinmux-pins  | grep PH8
 pin 232 (PH8): (MUX UNCLAIMED) (GPIO UNCLAIMED)
 ```
 
-​		能够看到PH8未被使用，且对应 pin 值为 232 ，引脚计算见 [pin脚计算](# pin脚计算)
+​		能够看到PH2 PH3未被使用，且对应 pin 值为 226 227
 
 
 
