--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -105,8 +105,7 @@ vim source/kernel/linux-5.4-h618/arch/arm64/boot/dts/sunxi/sun50iw9-kickpi-k2b.d
 ​		确认gpio未被注册
 
 ```
-root@kickpi:~# cat /sys/kernel/debug/pinctrl/pio/pinmux-pins  | grep PH8
-pin 232 (PH8): (MUX UNCLAIMED) (GPIO UNCLAIMED)
+root@kickpi:~# cat /sys/kernel/debug/pinctrl/pio/pinmux-pins  | grep PH
 ```
 
 ​		能够看到PH2 PH3未被使用，且对应 pin 值为 226 227
@@ -115,18 +114,10 @@ pin 232 (PH8): (MUX UNCLAIMED) (GPIO UNCLAIMED)
 
 步骤四
 
-​		通过 /sys/class/gpio/export 注册 PH8 并进行控制
+​		通过 /sys/class/gpio/export 注册 PH2，PH3 并进行控制
 
 ```
-// 注册
-root@kickpi:~# echo  232 > /sys/class/gpio/export
-// 查看是否生成
-root@kickpi:~# ls /sys/class/gpio/
-export  gpio232  gpiochip0  gpiochip352  unexport
-// 注册后的结点内容
-root@kickpi:~# ls /sys/class/gpio/gpio232
-active_low  device  direction  edge  power  subsystem  uevent  value
-root@kickpi:~#
+
 ```
 
 ​			通过结点下的内容控制 gpio , 常用如下
