--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -105,12 +105,12 @@ vim source/kernel/linux-5.4-h618/arch/arm64/boot/dts/sunxi/sun50iw9-kickpi-k2b.d
 ​		确认gpio未被注册
 
 ```
-root@kickpi:~# cat /sys/kernel/debug/pinctrl/pio/pinmux-pins  | grep PH
+root@kickpi:~# cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pinmux-pins | grep PH
 ```
 
 ​		能够看到PH2 PH3未被使用，且对应 pin 值为 226 227
 
-
+![image-20250326142700157](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250326142700157.png)
 
 步骤四
 
@@ -120,18 +120,20 @@ root@kickpi:~# cat /sys/kernel/debug/pinctrl/pio/pinmux-pins  | grep PH
 
 ```
 
-​			通过结点下的内容控制 gpio , 常用如下
+![image-20250326142738724](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250326142738724.png)			
+
+通过结点下的内容控制 gpio , 常用如下
 
 ```
 direction
 	in / out
-	echo in > /sys/class/gpio/gpio232/direction
-	echo out > /sys/class/gpio/gpio232/direction
+	echo in > /sys/class/gpio/gpio226/direction
+	echo out > /sys/class/gpio/gpio226/direction
 value
 	0 / 1
-	cat /sys/class/gpio/gpio232/value 		// 读取
-	echo 1 > /sys/class/gpio/gpio232/value	// 配置高电平
-	echo 0 > /sys/class/gpio/gpio232/value  // 配置低电平
+	cat /sys/class/gpio/gpio226/value 		// 读取
+	echo 1 > /sys/class/gpio/gpio226/value	// 配置高电平
+	echo 0 > /sys/class/gpio/gpio226/value  // 配置低电平
 ```
 
 
