--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -124,7 +124,7 @@ root@kickpi:~# cat /sys/kernel/debug/pinctrl/300b000.pinctrl/pinmux-pins | grep 
 
 通过结点下的内容控制 gpio , 常用如下
 
-```
+```shell
 direction
 	in / out
 	echo in > /sys/class/gpio/gpio226/direction
