--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -92,16 +92,9 @@ PhoenixSuit/Drivers/AW_Driver/
 
 **进入烧录模式**
 
-**串口方式进入烧录模式**
-
-1. 串口输入按住 2
-2. 主板上电，如果已上电则需重新上电（按一下复位键）
-
-
-
 **按键方式进入烧录模式**
 
-1. 按住 FEL升级键
+1. 按住 FEL升级键/BOOT按键
 2. 主板上电，如果已上电则需重新上电（按一下复位键）
 
 
