--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -235,6 +235,35 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 
 板载8822CS模块
 
+### 图形界面配置WIFI
+
+![image-20250327102121363](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250327102121363.png)
+
+### 命令连接WIFI
+
+```shell
+$ sudo nmcli dev wifi connect "you_WIFI_name" password "WiFi_password" ifname wlan0
+```
+
+>you_WIFI_name : 你要连接的WiFi名称
+>
+>WiFi_password ：你要连接的WiFi密码
+
+* 连接后WiFi的信息在这个目录下：
+
+```shell
+$ ls /etc/NetworkManager/system-connections
+wifi_oranth_5G.nmconnection
+```
+
+* 取消对应WiFi自动连接，例如WiFi：wifi_oranth_5G
+
+```shell
+$ sudo rm -rf /etc/NetworkManager/system-connections/wifi_oranth_5G.nmconnection
+```
+
+
+
 
 
 ## 4G / 5G模块
