--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1295,6 +1295,8 @@ $ candump can0
 
 **回环模式测试**
 
+方法一：
+
 启动can后，io输⼊命令开启回环⾃测（基地址根据实际dts启动的can配置）
 
 ```
@@ -1327,6 +1329,28 @@ root@linaro-alip:/# candump can0
 
 ```
 root@linaro-alip:/# cansend can0 123#DEADBEEF
+```
+
+
+
+方法二：
+
+开启回环测试
+
+```shell
+$ ip link set can0 type can loopback on
+```
+
+后台运行开启打印
+
+```shell
+$ candump can0 &
+```
+
+发送命令
+
+```shell
+$ cansend can0 123#DEADBEEF
 ```
 
 
