--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -254,6 +254,12 @@ $ hciconfig -a
 
 ```shell
 $ hcitool scan
+
+
+低功耗BLE蓝牙扫描
+$ hcitool -i hci0 cmd 0x3f 0x0013 0x01
+$ hcitool -i hci0 cmd 0x08 0x000B 01 10 10 00 00 00
+$ hcitool lescan
 ```
 
 4.配对蓝牙设备：选择你想要连接的蓝牙设备，并执行以下命令进行配对：
