--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -253,12 +253,12 @@ $ hciconfig -a
 3.扫描蓝牙
 
 ```shell
+经典蓝牙扫描
 $ hcitool scan
 
-
 低功耗BLE蓝牙扫描
-$ hcitool -i hci0 cmd 0x3f 0x0013 0x01
-$ hcitool -i hci0 cmd 0x08 0x000B 01 10 10 00 00 00
+$ hcitool -i hci0 cmd 0x03 0x0003
+$ hcitool -i hci0 cmd 08 01 3f 00 00 00 00 00 00 00
 $ hcitool lescan
 ```
 
