--- a/rk356x/zh/50-常见问题.md
+++ b/rk356x/zh/50-常见问题.md
@@ -20,9 +20,23 @@
 
 命令行-调试串口
 
-1. 
+1. 参考[12-硬件功能测试.md](12-硬件功能测试.md#UART)连接调试串口
 
+1. 内核日志打印命令
 
+   ```
+   $ dmesg
+   ```
+
+1. 日志保存
+
+   Windows下各种串口软件都有保存方法，下面只介绍网盘上提供的MobaXterm_Personal_20.3工具的保存方法
+
+   鼠标右键点击对应的窗口，选择保存当前窗口输出
+
+   ![image-20250328102712644](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250328102712644.png)
+
+   
 
 命令行-虚拟终端
 
