--- a/rk356x/zh/50-常见问题.md
+++ b/rk356x/zh/50-常见问题.md
@@ -1,6 +1,10 @@
 # 50-常见问题
 
+SDK - 指代源码路径
 
+console - 指代调试控制台
+
+ADB - Android Debug Bridge命令行工具，下文指代可运行ADB的环境
 
 
 
@@ -24,8 +28,8 @@
 
 1. 内核日志打印命令
 
-   ```
-   $ dmesg
+   ```shell
+   (console) $ dmesg
    ```
 
 1. 日志保存
@@ -50,7 +54,9 @@
 
 命令行-ADB
 
-
+```shell
+(ADB) # adb shell demsg > ./demsg.txt
+```
 
 
 
