--- a/rk356x/zh/50-常见问题.md
+++ b/rk356x/zh/50-常见问题.md
@@ -20,7 +20,7 @@ ADB - Android Debug Bridge命令行工具，下文指代可运行ADB的环境
 
 ## 内核日志抓取方法
 
-### Linux
+### 通用方法
 
 命令行-调试串口
 
@@ -40,12 +40,25 @@ ADB - Android Debug Bridge命令行工具，下文指代可运行ADB的环境
 
    ![image-20250328102712644](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250328102712644.png)
 
-   
+### Linux
 
 命令行-虚拟终端
 
-1. 连接
+1. 主板连接显示器、键盘
 
+2. 输入命令打印内核日志
+
+   ```shell
+   (console) $ dmesg
+   ```
+
+3. 将日志保存为文件
+
+      ```shell
+      (console) $ dmesg > dmesg.txt
+      ```
+
+4. 将文件通过U盘拷贝出来
 
 
 
