--- a/rk356x/zh/50-常见问题.md
+++ b/rk356x/zh/50-常见问题.md
@@ -67,8 +67,10 @@ ADB - Android Debug Bridge命令行工具，下文指代可运行ADB的环境
 
 命令行-ADB
 
+讲内核日志保存到D盘下dmesg.txt
+
 ```shell
-(ADB) # adb shell demsg > ./demsg.txt
+(ADB) # adb shell dmesg > D:/dmesg.txt
 ```
 
 
