--- a/rk356x/zh/50-常见问题.md
+++ b/rk356x/zh/50-常见问题.md
@@ -67,11 +67,21 @@ ADB - Android Debug Bridge命令行工具，下文指代可运行ADB的环境
 
 命令行-ADB
 
-讲内核日志保存到D盘下dmesg.txt
+1. 板子开机，电脑连接好板子usb-typeC口
 
-```shell
-(ADB) # adb shell dmesg > D:/dmesg.txt
-```
+2. 输入下面命令 确保有设备
+
+   ```
+   (ADB) # adb devices
+   ```
+
+3. 打开Windows的cmd，输入命令将内核日志保存到D盘下dmesg.txt
+
+   ```
+   (ADB) # adb shell dmesg > D:/dmesg.txt
+   ```
+
+
 
 
 
