--- a/rk356x/zh/50-常见问题.md
+++ b/rk356x/zh/50-常见问题.md
@@ -69,7 +69,7 @@ ADB - Android Debug Bridge命令行工具，下文指代可运行ADB的环境
 
 1. 板子开机，电脑连接好板子usb-typeC口
 
-2. 输入下面命令 确保有设备
+2. 输入下面命令，确保有设备
 
    ```
    (ADB) # adb devices
@@ -102,10 +102,22 @@ ADB - Android Debug Bridge命令行工具，下文指代可运行ADB的环境
 
 ### 启动卡在logo界面
 
-* 固件是否是为提供的固件，确保使用网盘提供的固件，技术支持才能帮助排查问题。
-* 重启多次，是否每次都这样
-* 如果是使用的Ubuntu系统有时启动会比较慢，需耐心等待一会，观察是否后续正常进入图形化界面
-* 上述确定完，依旧卡在logo界面，如下排查
-* 确认蓝色系统运行灯是否闪烁
-* 接调试串口，保持所有打印的开机日志，方便提供给技术支持帮助排查问题
+1. 固件是否是为提供的固件，确保使用网盘提供的固件，技术支持才能帮助排查问题。
+2. 重启多次，是否每次都这样
+3. 如果是使用的Ubuntu系统有时启动会比较慢，需耐心等待一会，观察是否后续正常进入图形化界面
+4. 上述确定完，依旧卡在logo界面，如下排查
+5. 确认蓝色系统运行灯是否闪烁
+6. 接调试串口，保持所有打印的开机日志，方便提供给技术支持帮助排查问题
 
+### 串口打印问题
+
+如没有打印，或者打印乱码
+
+1. 检查接线是正确，参考[12-硬件功能测试.md](12-硬件功能测试.md#UART)连接调试串口
+2. 使用的串口工具是否是我们家的，不是请确保能支持波特率1500000
+
+### 系统一直重启
+
+1. 除去所有外设，排除外设干扰
+2. 接串口查看日志进行排查，如果是修改导致的，会有一定报错
+3. 尝试更换电源供电，供电不良好会让板子部分功能异常导致重启
