--- a/rk356x/zh/50-常见问题.md
+++ b/rk356x/zh/50-常见问题.md
@@ -100,6 +100,8 @@ ADB - Android Debug Bridge命令行工具，下文指代可运行ADB的环境
 
 ## 常见问题排查
 
+​	以下常见问题请确保烧录的固件为网盘提供的固件，技术支持才能同步帮你排查。
+
 ### 启动卡在logo界面
 
 1. 固件是否是为提供的固件，确保使用网盘提供的固件，技术支持才能帮助排查问题。
@@ -111,7 +113,7 @@ ADB - Android Debug Bridge命令行工具，下文指代可运行ADB的环境
 
 ### 串口打印问题
 
-如没有打印，或者打印乱码
+如没有打印或者打印乱码
 
 1. 检查接线是正确，参考[12-硬件功能测试.md](12-硬件功能测试.md#UART)连接调试串口
 2. 使用的串口工具是否是我们家的，不是请确保能支持波特率1500000
@@ -119,5 +121,5 @@ ADB - Android Debug Bridge命令行工具，下文指代可运行ADB的环境
 ### 系统一直重启
 
 1. 除去所有外设，排除外设干扰
-2. 接串口查看日志进行排查，如果是修改导致的，会有一定报错
+2. 接串口查看日志进行排查
 3. 尝试更换电源供电，供电不良好会让板子部分功能异常导致重启
