--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -14,6 +14,8 @@
 
 ![image-20250222135232259](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250222135232259.png)
 
+默认的DEBUG-UART功能不建议修改。
+
 带 * 号为软件默认配置功能
 
 ### K2C 20PIN引脚图
