--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -422,7 +422,7 @@ vim /home/kickpi/.vnc/xstartup
 
 注释所有内容并添加一下内容
 
-``` 
+``` shell
 unset SESSION_MANAGER
 unset DBUS_SESSION_BUS_ADDRESS
 startxfce4 &
