--- a/rk356x/zh/41-固件解包和打包.md
+++ b/rk356x/zh/41-固件解包和打包.md
@@ -66,7 +66,7 @@ Image  MiniLoaderAll.bin  package-file  parameter.txt
 1. 拷贝文件到rockdev对应路径，删除之前用于解包的update.img镜像
 
 ```shell
-$ cp output/* ./
+$ cp -rf output/* ./ 
 $ mv parameter.txt Image/
 $ mv MiniLoaderAll.bin Image/
 $ rm update.img
