--- a/rk356x/zh/41-固件解包和打包.md
+++ b/rk356x/zh/41-固件解包和打包.md
@@ -61,7 +61,7 @@ Image  MiniLoaderAll.bin  package-file  parameter.txt
 
 ### 打包
 
-将解包出的镜像修改完成后就可以进行重新打包了
+将解包出的镜像修改完成后就可以进行重新打包了，如果修改比较大可能出现镜像大小变化太大导致分区不足的问题。
 
 1. 拷贝文件到rockdev对应路径，删除之前用于解包的update.img镜像
 
