--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -283,6 +283,14 @@ $ echo "123" > /dev/ttyAS3
 
 ## 5. USB
 
+### USB HOST测试
+
+
+
+### USB DEVICE测试
+
+
+
 ### OTG模式切换
 
 Android13.0系统 USB默认支持OTG模式，可自动切换主从功能
