--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -14,11 +14,11 @@ h618_data\3-SoftwareData软件资料\Qt_environment_installation
 
 建议断网安装，否则需要登录
 
-![image-20250305154700903](C:\Users\10539\AppData\Roaming\Typora\typora-user-images\image-20250305154700903.png)
+![image-20250305154700903](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305154700903.png)
 
 ![image-20250305154721393](C:\Users\10539\AppData\Roaming\Typora\typora-user-images\image-20250305154721393.png)
 
-![image-20250305154733307](C:\Users\10539\AppData\Roaming\Typora\typora-user-images\image-20250305154733307.png)
+![image-20250305154733307](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305154733307.png)
 
 如下图选择工具
 
