--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -235,6 +235,8 @@ $ ls /dev/ttyS*
 3. 使用 microcom 进行通信测试
 
 > Android默认安装有microcom 
+>
+> 接收的内容会打印出来，发送的内容无打印
 
 ```shell
 $ microcom -s 115200 /dev/ttyS4
