--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -269,3 +269,8 @@ echo KICKPI > /dev/ttyS4
 
 ![image-20241127185925821](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241127185925821.png)
 
+## ADB登录
+
+buildroot系统能够使用adb shell
+
+![image-20250411095235009](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250411095235009.png)
