--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -260,8 +260,8 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 ![image-20241105101842412](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241105101842412.png)
 **测试命令**
 
-``` 
-stty -F /dev/ttyS4 speed 115200 cs8
+``` shell
+stty -F /dev/ttyS4 ispeed 115200 ospeed 115200 cs8
 echo KICKPI > /dev/ttyS4
 ```
 
