--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -186,6 +186,37 @@ index a5fa88c88..67fb67b5b 100755
 
 
 
+
+
+
+
+## 更换开机动画图片
+
+* 替换开机动画图片
+
+```
+/usr/share/plymouth/ubuntu-logo.png
+/usr/share/plymouth/themes/spinner/watermark.png
+/usr/share/plymouth/themes/spinner/bgrt-fallback.png
+```
+
+> 将自定义图片替换到以上三处路径
+>
+> 注意图片格式为PNG
+
+
+
+* 更新开机动画图片
+
+```
+$ sudo update-initramfs -u
+$ reboot
+```
+
+
+
+
+
 ### 设置开机自启动命令
 
 把需要的命令写到系统里面的/etc/rc.local
