--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -417,6 +417,8 @@ KICKPI-K2C设计中可选配：1路485（/dev/ttyAS3）一路232(/dev/ttyAS4)
 # microcom -s 115200 /dev/ttyAS3
 ```
 
+> ctrl+] 退出
+
 使用minicom验证：
 
 接收的内容会打印出来，发送的内容无打印
