--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -437,11 +437,18 @@ KICKPI-K2C设计中可选配：1路485（/dev/ttyAS3）一路232(/dev/ttyAS4)
 
 如果退出后串口被不正常占用：minicom -s 将 Serial port setup>> F   Hardware Flow Control 关掉  然后保存退出
 
-或者使用echo直接发送
+* stty命令
+
+查看uart信息
+
+```
+# stty -F /dev/ttyAS3 -a 	
+```
+
+设置波特率并发送数据
 
 ```shell
-# stty -F /dev/ttyAS3 -a 	//可以看默认波特率
-# stty -F /dev/ttyAS3 115200 	//可以设置
+# stty -F /dev/ttyAS3 115200 
 # echo "123" > /dev/ttyAS3
 ```
 
