--- a/h618/zh/10-系统镜像烧录.md
+++ b/h618/zh/10-系统镜像烧录.md
@@ -4,7 +4,7 @@ K2B 目前提供 Android12.0 和 Ubuntu22.04 两个镜像
 
 Android12.0 可使用 USB烧录线 把镜像烧录到板载eMMC
 
-Ubuntu22.04 需要可把镜像烧录到SD卡，直接用SD卡启动系统 或 将SD卡的系统拷贝到eMMC
+Ubuntu22.04 需要把镜像烧录到SD卡，直接用SD卡启动系统 或 将SD卡的系统拷贝到eMMC
 
 镜像可通过网盘这个路径下载
 
