--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -186,7 +186,7 @@ index a5fa88c88..67fb67b5b 100755
 
 
 
-### 设置开机自启动命令
+## 设置开机自启动命令
 
 把需要的命令写到系统里面的/etc/rc.local
 
@@ -194,7 +194,7 @@ index a5fa88c88..67fb67b5b 100755
 
 
 
-### 设置wifi热点（AP）模式
+## 设置wifi热点（AP）模式
 
 查看是否支持AP模式
 
@@ -302,7 +302,7 @@ sudo create_ap --stop <virtualwlanname>  #<virtualwlanname> 虚拟网卡名
 
 
 
-### 连接WiFi并获取ip
+## 连接WiFi并获取ip
 ```
 touch /etc/wpa_supplicant.conf
 vi /etc/wpa_supplicant.conf
@@ -336,7 +336,7 @@ wpa-conf /etc/wpa_supplicant.conf
 
 
 
-### SSH 登录
+## SSH 登录
 
 ubuntu-server版系统默认安装了有SSH
 打开Windows cmd
@@ -372,7 +372,7 @@ PermitRootLogin yes
 
 
 
-### VNC远程桌面登陆
+## VNC远程桌面登陆
 
 vnc软件下载
 
@@ -389,7 +389,7 @@ vncserver
 
 vim /home/kickpi/.vnc/xstartup
 
-注释所有内容并添加一下内容
+注释所有内容并添加以下内容
 
 ``` shell
 unset SESSION_MANAGER
@@ -415,7 +415,7 @@ vncserver -geometry 1920x1080
 
 ![image-20250317142740629](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250317142740629.png)
 
-### UBUNTU从官网安装软件包
+## UBUNTU从官网安装软件包
 
 安装gcc为例子
 
@@ -563,7 +563,7 @@ cat /sys/kernel/debug/sunxi_pinctrl/dev_name
 
 ## 常见问题
 
-1. 桌面声卡设置打开报错
+1. 桌面声卡设置打开报错 无法设置HDMI播放音频
 
 ![05f3817bf038d6f1f138a290c0496e68](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/05f3817bf038d6f1f138a290c0496e68.jpg)
 
@@ -572,8 +572,13 @@ cat /sys/kernel/debug/sunxi_pinctrl/dev_name
 终端输入
 
 ``` shell
+cd /bin
 sudo ln -s pavucontrol pavucontrol-qt
+sudo apt-get update
+sudo apt purge pulseaudio
+sudo apt install pulseaudio
 ```
 
+其他问题
 
-
+[双系统下Ubuntu20.04使用Pavucontrol无法连接pulseaudio解决办法_pulseaudio无法启动-CSDN博客](https://blog.csdn.net/liaryke/article/details/129300279)
