--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1032,21 +1032,29 @@ $ echo A > /dev/watchdog
 
 ## 22. 4G通讯模块
 
-目前适配支持 Quecte EC20、Quecte EC200M-CN 型号模块
+目前适配支持 Quecte EC20、Quecte EC200M-CN 型号模块、
 
-### 硬件连接方式
+### MiniPCIE接口的USB_4G模块
 
 ![image-20231215153217640](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231215153217640.png)
 
+测试方法：
 
+​	只要USB_4G模块 、天线、SIM卡都正常装配，系统开机会自动检测，获取IP。
+
+
+
+### UART接口的uART_4G模块
 
 ![1733198014256](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/1733198014256.png)
 
-```
-/etc/ppp/peers/quectel-pppd.sh /dev/ttyS4
+UART模块的需要手动执行连接脚本
+
+```shell
+$ sudo /etc/ppp/peers/quectel-pppd.sh /dev/ttyS4
 ```
 
-
+>  /dev/ttyS4（UART4）：使用的UART口
 
 ![image-20241203115419752](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241203115419752.png)
 
