--- a/rk356x/zh/50-常见问题.md
+++ b/rk356x/zh/50-常见问题.md
@@ -69,13 +69,13 @@ ADB - Android Debug Bridge命令行工具，下文指代可运行ADB的环境
 
 1. 板子开机，电脑连接好板子usb-typeC口
 
-2. 输入下面命令，确保有设备
+2. 打开Windows的cmd，输入下面命令，确保有设备
 
    ```
    (ADB) # adb devices
    ```
 
-3. 打开Windows的cmd，输入命令将内核日志保存到D盘下dmesg.txt
+3. 输入命令将内核日志保存到D盘下dmesg.txt
 
    ```
    (ADB) # adb shell dmesg > D:/dmesg.txt
