--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -1,136 +1,251 @@
 # 10-系统镜像烧录
 
-
-
-## 说明
-
-sdk - 指代源码 ，具体名称见 SDK源码编译
+此文档用于用户烧录或升级主板系统。
 
 
 
-## 固件烧录
+## 获取镜像文件<a id="IMG-K7"></a>
 
-### AndroidTool工具路径
+镜像文件可通过以下两种方式获取：网盘下载、SDK编译
 
-工具是在源码中可以找到，备份了一份在网盘 5-DevelopmentTool开发工具下
+SDK编译详细步骤参考文档 SDK 源码编译。
 
-Android14.0的USB驱动 DriverAssitant 需要更新到V5.1.1版本，可以参考下面的工具章节进行更新。
-
-RK3576平台windows固件烧写工具必须使用V3.28及以上版本
-
-Windows烧写工具：
-
-网盘中路径：
+### 镜像网盘目录
 
 ```
-5-DevelopmentTool
+2-Image/
+├── Android14
+│   ├── boot
+│   │   └── 20250414
+│   │       ├── boot-10.1-MX101BA1340.img
+│   │       ├── boot-5-F050008M01.img
+│   │       ├── boot-8-MX080B2140.img
+│   │       └── parameter.txt
+│   ├── update-rk3576-kickpi-k7-android-10.1-AT101DS40I-202504171511.img
+│   ├── update-rk3576-kickpi-k7-android-10.1-MX101BA1340-202504171555.img
+│   ├── update-rk3576-kickpi-k7-android-5-F050008M01-202504171536.img
+│   ├── update-rk3576-kickpi-k7-android-8-MX080B2140-202504171436.img
+│   └── update-rk3576-kickpi-k7-android-HDMI-202504171451.img
+├── Debian12
+│   ├── update-rk3576-kickpi-k7-linux-debian-10.1-AT101DS40I-20250417-110424.img
+│   ├── update-rk3576-kickpi-k7-linux-debian-10.1-MX101BA1340-20250417-114626.img
+│   ├── update-rk3576-kickpi-k7-linux-debian-5-F050008M01-20250417-111519.img
+│   ├── update-rk3576-kickpi-k7-linux-debian-8-MX080B2140-20250417-113537.img
+│   └── update-rk3576-kickpi-k7-linux-debian-HDMI-20250417-115658.img
+├── Ubuntu2404
+│   ├── update-rk3576-kickpi-k7-linux-ubuntu-10.1-AT101DS40I20250417-104317.img
+│   ├── update-rk3576-kickpi-k7-linux-ubuntu-10.1-MX101BA1340-20250417-093953.img
+│   ├── update-rk3576-kickpi-k7-linux-ubuntu-5-F050008M01-20250417-102300.img
+│   ├── update-rk3576-kickpi-k7-linux-ubuntu-8-MX080B2140-20250417-100614.img
+│   └── update-rk3576-kickpi-k7-linux-ubuntu-HDMI-20250417-092759.img
+└── UPDATE_LOG.txt
 ```
 
 
 
-### 安装USB驱动
-
-**USB驱动路径**
+### 镜像名称解析
 
 ```
-5-DevelopmentTool开发工具/USB Driver USB驱动/DriverAssitant_v5.13.zip
+update-rk3576-kickpi-k7-android-HDMI-202504171451.img
+A(update)-B(rk3576-kickpi-k7)-C(android)-D(HDMI)-E(202504171451).img
 ```
 
-1. 将 DriverAssitant_v5.13.zip 解压，打开解压后的文件夹
+**A部分**
 
-2. 找到 DriverInstall.exe ，双击运行
+update - 指完整镜像包。
+
+
+
+**B部分**
+
+主控型号、硬件版型部分。
+
+rk3576-kickpi-k7 - 指代主控型号rk3576、硬件板型k7。
+
+
+
+**C部分**
+
+系统名称部分。
+
+android - Android系统镜像
+
+ubuntu - Ubuntu系统镜像
+
+debian - Debian系统镜像
+
+
+
+**D部分**
+
+镜像名称的其他标志，用于指示镜像一些特殊的区别。
+
+hdmi ，默认显示hdmi接口
+
+8-MX080B2140，默认显示型号 MX080B2140屏幕
+
+
+
+**E部分**
+
+202504171451 - 镜像更新日期。
+
+
+
+## 镜像烧录
+
+### 安装USB驱动<a id="USBDRV"></a>
+
+**网盘路径**
+
+```
+5-DevelopmentTool/USB Driver USB/DriverAssitant_v5.13.zip
+```
+
+> Android14.0的USB驱动 DriverAssitant 需要更新到V5.1.1版本。
+
+
+
+1. 将 DriverAssitant_v5.13.zip 解压，打开解压后的文件夹；
+
+2. 找到 DriverInstall.exe ，双击运行；
+
 
 ![image-20241025101533688](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025101533688.png)
 
-3. 点击驱动安装，提示安装成功
+
+
+3. 点击驱动安装，提示安装成功；
+
+（若已安装旧版本驱动，可先进行驱动卸载再驱动安装，保持驱动版本为最新）
 
 ![image-20241025101606583](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025101606583.png)
 
 
 
-**USB设备验证**
+### 安装RKDevTool
 
-1. 主板上电，准备一个能传输文件的 type-c 线
-2. 使用 type-c 连接主板和PC电脑
-
-3. 打开电脑中设备管理器
-
-4. 可以查看到usb设备，说明USB驱动安装成功
-
-![image-20241025101105194](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025101105194.png)
-
-
-
-
-
-**不识别问题**
-
-1. 确认主板已经上电
-
-2. 打开DriverInstall.exe ，尝试驱动卸载，再进行驱动安装
-
-3. 反馈咨询客服
-
-
-
-### 使用烧录工具
-
-调试烧录工具
+**网盘路径**
 
 ```
-5-DevelopmentTool/USB ImageBurnTool 镜像烧录工具/RKDevTool_v3.30_for_window.zip
+5-DevelopmentTool/USB ImageBurnTool/RKDevTool_v3.30_for_window.zip
 ```
 
-解压 RKDevTool_v3.30_for_window.zip 压缩文件，在文件下找到 RKDevTool.exe ，双击打开
+> RK3576平台windows固件烧写工具必须使用V3.28及以上版本。
+
+
+
+1. 将 RKDevTool_v3.30_for_window.zip 解压，打开解压后的文件夹；
+
+2. 找到 RKDevTool.exe，双击运行；
 
 ![image-20241025161627415](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025161627415.png)
 
 
 
-#### **整包烧录**
+### 烧录镜像
 
-LOADER / MASKROM模式
+1. 进入 **LOADER模式** 需要按下RECOVERY按键，上电（主板已上电可按复位进行复位）；进入 **MASKROM模式** 需要按下板子背后的MASKROM按键，上电（主板已上电可按复位进行复位）；
 
-```
-LOADER模式：可分区烧录，分区烧录，详情见更多说明
-MASKROM模式：不可分区烧录
-```
+   > LOADER / MASKROM模式均支持整包烧录，选择一个模式进行烧录即可。
 
-1. `LOADER模式`按下RECOVERY按键，上电 （或者按复位进行复位）
+2. 瑞芯微开发工具上能够识别到 LOADER设备 或 MASKROM设备；（需要先安装USB驱动，才能识别到相关设备）
 
-`MASKROM模式`按下板子背后的MASKROM按键，上电 （或者按复位进行复位）
-
-2. 瑞芯微开发工具上能够识别到LOADER设备或MASKROM设备
-
-3. 点击升级固件，跳转到升级固件界面
-
-4. 点击固件，选择要烧录的镜像 update-*.img
-
-5. 点击升级，等待烧录完成
-
-6. 重启即可
+![image-20250422093529751](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250422093529751.png)
 
 
 
-#### **更多说明**
+3. 点击 **Upgrade Firmware**，跳转到升级固件界面；
 
-烧录工具更多详细说明见
+4. 点击 **Firmware**，选择要烧录的镜像 update-*.img；[获取镜像文件](#IMG-K7)
 
-```
-/RKDevTool_v3.30_for_window/开发工具使用文档_v1.0.pdf
-```
+![image-20250422093506005](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250422093506005.png)
+
+
+
+5. 点击 **Upgrade**，等待烧录完成；
+
+![image-20250422093623591](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250422093623591.png)
+
+
+
+6. 烧录完成；
+
+![image-20250422093934098](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250422093934098.png)
 
 
 
 ## 工厂烧录
 
+### 安装FactoryTool
+
+**网盘路径**
+
 ```
-5-DevelopmentTool开发工具/FactoryTool 工厂镜像烧录工具/FactoryTool_v1.89.zip
+5-DevelopmentTool/FactoryTool/FactoryTool_v1.89.zip
 ```
-打开软件
+
+1. 将 FactoryTool_v1.89.zip 解压，打开解压后的文件夹；
+
+2. 找到 FactoryTool.exe，双击运行；
 
 ![image-20250109172029374](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250109172029374.png)
 
-选择固件，进行烧录，接入主板后，使主板进入 MASKROM / LOADER 模式
 
-![image-20250109172203575](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250109172203575.png)
+
+### 烧录镜像
+
+1. 点击 **Firmware**，选择要烧录的镜像 update-*.img；
+
+![image-20250422101009222](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250422101009222.png)
+
+
+
+2. 点击 **Run**，启动工厂烧录模式；
+
+3. 绿灯状态下，使用TYPE-C连接主板；
+
+4. 进入 **LOADER模式** 需要按下RECOVERY按键，上电（主板已上电可按复位进行复位）；进入 **MASKROM模式** 需要按下板子背后的MASKROM按键，上电（主板已上电可按复位进行复位）；[USB驱动安装](#USBDRV)
+
+5. 观察灯，当识别到设备会切换成红灯，此时不要拔出或接入设备；
+
+   ![image-20250422103006729](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250422103006729.png)
+
+   
+
+6. 等待绿灯，重复步骤3、步骤4、步骤5，可同时烧录新的设备；
+
+7. 烧录所有设备完成，点击 **Stop**；
+
+
+
+## 常见问题
+
+### **Loader或Maskrom模式不识别问题**
+
+1. 进入**LOADER模式**需要按下RECOVERY按键，上电（主板已上电可按复位进行复位）；进入**MASKROM模式**需要按下板子背后的MASKROM按键，上电（主板已上电可按复位进行复位）。
+
+2. 打开电脑中设备管理器；
+
+3. 可以查看到usb设备，说明USB驱动安装成功；
+
+![image-20241025101105194](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025101105194.png)
+
+
+
+如果识别不到 Class for rockusb devices，可尝试下面步骤：
+
+1. 打开DriverInstall.exe ，尝试驱动卸载，再进行驱动安装；[USB驱动安装](#USBDRV)
+
+2. 反馈咨询客服
+
+
+
+### **RKDevTool其他功能**
+
+烧录工具更多说明见
+
+```
+RKDevTool_v3.30_for_window/开发工具使用文档_v1.0.pdf
+```
+
