--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -1,10 +1,10 @@
 # 12-硬件功能使用说明
 
-## 拓展引脚<a id="ExpansionPin-K7"></a>
+## 拓展引脚<a id="ExpansionPin-K7"> </a>
 
 **K7拓展引脚列表**
 
-![K7_40pin](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/K7_40pin.jpg)
+![image-20250424152800242](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250424152800242.png)
 
 > 带 * 号为默认软件默认配置功能
 
@@ -69,6 +69,8 @@ $ echo 0 >  /sys/class/leds/GPIO3_D4/brightness
 
 
 ## UART
+
+>  K7系列的UART口，除调试口外,目前均是1.8VUART
 
 ### 调试串口使用
 
