--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -4,6 +4,8 @@
 
 ![image-20250325171233411](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250325171233411.png)
 
+“*”号为默认功能
+
 ## LVDS
 
 硬件连接
@@ -220,7 +222,7 @@ stty -F /dev/ttyS1 ispeed 115200 ospeed 115200 cs8
 
 > 串口设备节点说明：
 >
-> ​	默认都是TTL串口，下单前可跟客服沟通修改未485和232
+> ​	在扩展管脚上为TTL信号 在白色端子上为对应的485或232信号
 >
 > ​	ttyS1 作为 RS485串口
 >
@@ -271,6 +273,16 @@ echo KICKPI > /dev/ttyS4
 
 ## ADB登录
 
+使用TYPE-C线连接电脑和板卡
+
 buildroot系统能够使用adb shell
+
+win键+R打开“运行” 输入cmd打开命令行
+
+![image-20250226152824342](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250226152824342.png)
+
+cmd命令行中输入adb shell即可连接
+
+系统若没有adb命令支持可自行参考安装[Windows 10 安装 ADB (Android Debug Bridge，Android 调试桥)-CSDN博客](https://blog.csdn.net/chengyq116/article/details/108291213)
 
 ![image-20250411095235009](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250411095235009.png)
