--- a/t113-s3/zh/10-系统镜像烧录.md
+++ b/t113-s3/zh/10-系统镜像烧录.md
@@ -6,9 +6,9 @@
 
 开发板出厂默认烧录好镜像，若不需要更换系统的话，可直接跳过此步骤，启动系统
 
+### USB线烧录
 
-
-### 准备工具
+**准备工具**
 
 **下载软件工具**
 
@@ -41,9 +41,7 @@
 
 准备一根 USB A to C 烧录线，用于连接烧录主机 于 开发板
 
-
-
-### 安装USB驱动
+**安装USB驱动**
 
 **解压PhoenixSuit.zip**
 
@@ -95,7 +93,7 @@ PhoenixSuit/Drivers/AW_Driver/
 
 ![image-20221129104725698](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20221129104725698.png)
 
-### FAQ
+**FAQ**
 
 1.遇到兼容性错误
 
@@ -109,7 +107,7 @@ https://support.microsoft.com/zh-cn/windows/%E6%97%A0%E6%B3%95%E5%9C%A8%E6%AD%A4
 
 ![image-20241026114443290](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241026114443290.png)
 
-### 安装镜像烧录工具
+**安装镜像烧录工具**
 
 **解压PhoenixSuit.zip**
 
@@ -125,9 +123,7 @@ https://support.microsoft.com/zh-cn/windows/%E6%97%A0%E6%B3%95%E5%9C%A8%E6%AD%A4
 
 ![image-20240306170835586](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306170835586.png)
 
-
-
-### 烧录镜像
+**烧录镜像**
 
 **选择烧录镜像**
 
@@ -159,3 +155,31 @@ https://support.microsoft.com/zh-cn/windows/%E6%97%A0%E6%B3%95%E5%9C%A8%E6%AD%A4
 
 
 
+### SD卡烧录
+
+量产卡和启动卡的区别
+
+量产卡会自动将SD卡里的系统镜像烧录进入emmc中，无法直接启动
+
+启动卡会从SD卡中启动系统，能够直接启动系统
+
+#### 启动卡烧录
+
+1. 插入SD卡到电脑
+2. 按照以下步骤操作烧录工具
+
+![image-20240718145612214](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240718145612214.png)
+
+插入烧录好的SD卡到开发板，上电启动即可自动
+
+#### 量产卡烧录
+
+1.选择镜像
+
+2.选择量产卡
+
+3.烧卡
+
+![image-20250303140114424](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250303140114424.png)
+
+插入烧录好的SD量产卡到开发板，上电启动即可自动开启烧录
