--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -94,7 +94,7 @@ PhoenixSuit/Drivers/AW_Driver/
 
 **按键方式进入烧录模式**
 
-1. 按住 FEL升级键/BOOT按键
+1. 按住RECOVER按键/BOOT按键
 2. 主板上电，如果已上电则需重新上电（按一下复位键）
 
 
@@ -122,6 +122,20 @@ PhoenixSuit/Drivers/AW_Driver/
 
 
 ![image-20221129104725698](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20221129104725698.png)
+
+### 常见问题
+
+1.遇到兼容性错误
+
+![image-20241026114145257](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241026114145257.png)
+
+解决方法参考Microsoft解决方法
+
+Microsoft官方链接
+
+https://support.microsoft.com/zh-cn/windows/%E6%97%A0%E6%B3%95%E5%9C%A8%E6%AD%A4%E8%AE%BE%E5%A4%87%E4%B8%8A%E5%8A%A0%E8%BD%BD%E9%A9%B1%E5%8A%A8%E7%A8%8B%E5%BA%8F-8eea34e5-ff4b-16ec-870d-61a4a43b3dd5
+
+![image-20241026114443290](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241026114443290.png)
 
 
 
