--- a/rk356x/zh/50-常见问题.md
+++ b/rk356x/zh/50-常见问题.md
@@ -83,6 +83,19 @@ ADB - Android Debug Bridge命令行工具，下文指代可运行ADB的环境
 
 
 
+Andorid 系统日志
+
+1. 开机，命令进行抓取。
+
+```
+(ADB) # adb logcat > D:/logcat.txt
+```
+
+2. 复现问题。
+
+3. Ctrl + C 停止
+4. 提供logcat.txt
+
 
 
 ## Ubuntu系统常见问题
