--- a/a133/zh/34-K5C主板供电.md
+++ b/a133/zh/34-K5C主板供电.md
@@ -65,7 +65,7 @@ K5C 主板支持多种供电方式，注意硬件版本是否支持。
 
 1、根据丝印连接电池正负极。
 
-![image-20250508100049582](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250508100049582.png)
+![image-20250508100049582](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/BAT.png)
 
 2、接入电池后，长按Power按键进行开机，观察指示灯是否正常。若指示灯异常，请立即拔出电池接线！
 
